# customer-intelligence

./: .gcloudignore  .gitignore  Dockerfile  README.md  app.yaml  azure-pipelines.yml  docker-compose.yml  mlflow.db  pyproject.toml  reflection.md  requirements.txt  single_row.csv  startup.sh  test-results.xml  test_customer_intel.sh  test_local_service.py  video_,ink.txt
.github/workflows/: ci.yml
data/: metrics_log.jsonl  synthetic_train.csv  test.csv  train.csv
data/chroma_db/: chroma.sqlite3
data/models/: active_champion_model.pkl  baseline_model.pkl  champion_model.pkl
data/scored/: scored_batch_20260527_120744.csv  scored_batch_20260527_123001.csv  scored_batch_20260527_184444.csv
deploy/: azure-pipelines.yml  build.sh  config.sh  deploy-webapp.sh  deploy.sh  redeploy.sh
docker/: Dockerfile.fastapi  Dockerfile.mlflow  Dockerfile.ui  nginx.conf.template
docs/: RAG_eval.md  architecture.md  checkpoint.md  decision_log.md  deployment.md  hardening.md  ml_drift_report.html  walkthrough.md
monitoring/: ml_drift.py  rag_monitor.py
src/: __init__.py  config.py
src/data_pipeline/: __init__.py  add_to_dataset.py  features.py  generate_dummy_data.py  generate_synthetic_data.py  ingest.py  validate.py
src/rag/: __init__.py  answer.py  build_index.py  langgraph_agent.py  rag_eval.py  retrieve.py
src/serving/: __init__.py  app.py  database.py  schemas.py  serve.py
src/training/: __init__.py  evaluate.py  train.py
tests/: test_api.py  test_database.py  test_promotion.py  test_rag.py  test_validation.py
ui/: README.md  index.html  test.html
(+11 files in other folders)
